# aws-organization

./: .copier-answers.yml  .coveragerc  .pre-commit-config.yaml  README.md  mutex_queue  pulumi-bootstrap.yaml  pyproject.toml
.devcontainer/: create-aws-profile.sh  devcontainer.json  docker-compose.yml  install-ci-tooling.py  install-ci-tooling.sh  install-pulumi-cli.sh  on-create-command.sh  post-start-command.sh
.github/actions/install_deps/: action.yml
.github/actions/pulumi_ephemeral_deploy/: action.yml
.github/workflows/: ci.yaml  get-values.yaml  pre-commit.yaml  pulumi-aws.yml  pulumi.yml  refresh-stack.yaml
src/aws_organization/: config.py  constants.py  legacy_biotasker.py  lib.py  org_management.py  program.py  pulumi_deploy.py  shared_lib.py  workloads.py
src/aws_organization/lib/: __init__.py  account.py  central_infra_workload.py  constants.py  org_units.py  program.py  pulumi_deploy.py  shared_lib.py  workload.py
src/aws_organization/lib/permissions/: __init__.py  lib.py  permissions.py
src/aws_organization/pulumi_ephemeral_deploy/: utils.py
