[project]
name = "aws-organization"
version = "0.1.0"
description = "Managing the AWS Organization and Accounts"

readme = "README.md"
requires-python = ">=3.12.7"

dependencies = [
    # Specific to this template


    # Managed by upstream template
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-randomly>=3.16.0",
    "pulumi>=3.186.0",
    "pulumi-aws>=7.1.0",
    "pulumi-aws-native>=1.31.0",
    "pulumi-command>=1.1.0",
    "ephemeral-pulumi-deploy>=0.0.4",
    "lab-auto-pulumi>=0.1.15",
    "boto3>=1.39.14",
    "boto3-stubs[all]>=1.39.14",
    "pydantic>=2.11.7",
]

[tool.uv]
package = true
